# gt-telem

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  MANIFEST.in  README.md  build.bat  index.html  main.py  objects.inv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  pr-lint.yml  pre-commit.yml  release.yml  test.yml
gt_telem/: __init__.py  requirements-dev.txt  requirements.txt  turismo_client.py  turismo_game.py
gt_telem/errors/: playstation_errors.py
gt_telem/events/: __init__.py  driver_events.py  event_utils.py  game_events.py  race_events.py  turismo_driver.py  turismo_game.py  turismo_race.py
gt_telem/models/: __init__.py  helpers.py  models.py  telemetry.py  telemetry_packet.py
gt_telem/net/: crypto.py  device_discover.py
gt_telem/trackdetector/: __init__.py  track_detector.py  track_names.csv  track_names.py  utils.py
tests/: test_models.py
turismo_client/: index.html
