# pyproject.toml

[build-system]
requires      = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gt-telem"
version = "0.1.0"
description = "Library to interface with Gran Turismo's motion rig telemetry service."
readme = "README.md"
authors = [{ name = "Jonpro03", email = "jonpro03@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
]
keywords = ["gran", "turismo"]
dependencies = [
    "salsa20 >= 0.3.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pandas", "pre-commit"]

[project.urls]
Homepage = "https://github.com/RaceCrewAI"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"gt_telem/__init__.py" = [
    '__version__ = "{version}"'
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
